<resources>
    <string name="app_name">PDF Viewer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="page">1</string>
    <string name="cancle">Cancel</string>
    <string name="delete_file">Delete this file</string>
    <string name="delete_file_ques">Do you want to delete this file?</string>
    <string name="file_name">File Name: </string>
    <string name="path">Path: </string>
    <string name="last_modifiled">Last Modifiled: </string>
    <string name="size">Size: </string>
    <string name="go_to_page">Go to page</string>
    <string name="enter_page">Enter page</string>
    <string name="night_mode">Night mode</string>
    <string name="h_mode">Horizontal</string>
    <string name="v_mode">Vertical</string>
    <string name="properties">Properties</string>
    <string name="rate_app">Rate App</string>
    <string name="not_now">Not Now</string>
    <string name="rate_now">Rate Now</string>
    <string name="do_you_love_this_app_nratting_for_us">Do you love this?\nRatting for us!</string>

</resources>
