<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/bg_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_file"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_file_ques"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:textColor="#212121"
        android:id="@+id/tv"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:textSize="17dp"
        android:textColor="#000"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/tv_ok_de"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tv"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancle"
        android:textSize="17dp"
        android:textColor="#000"
        android:id="@+id/tv_cancel_de"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="80dp"
        android:layout_below="@+id/tv"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>
</RelativeLayout>